# HiGHS

./: CMakeLists.txt
src/: CMakeLists.txt  HConfig.h
